Run snippet scala code using scala-cli

--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,12 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Scala Snippet Checker'
+description: 'Run Scala code from snippet in issues'
 inputs:
-  milliseconds: # change this
-    required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+  token:
+    description: 'GITHUB_TOKEN'
+    default: ${{ github.token }}
+  max-lines: 
+    description: If the output of the running snippet code is longer than `max-lines`, it will not be fully displayed in comment.
+    default: 10  
 runs:
   using: 'node12'
   main: 'dist/index.js'
