--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,13 @@
-name: 'build-test'
-on: # rebuild any PRs and main branch changes
-  pull_request:
+on:
   push:
     branches:
-      - main
-      - 'releases/*'
+    - main
+    tags:
+    - "v*"
+  pull_request:
 
 jobs:
-  build: # make sure build/ci work properly
+  build: 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
